feat: implementacion tarea 2.6 gestion de identidades
